--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ astroid==2.4.0
 autopep8==1.5.2
 colorama==0.4.3
 Django==1.11.29
+django-forms-bootstrap==3.1.0
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
