--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 astroid==2.4.0
 autopep8==1.5.2
+certifi==2020.4.5.1
+chardet==3.0.4
 colorama==0.4.3
 Django==1.11.29
 django-forms-bootstrap==3.1.0
+idna==2.9
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
@@ -13,7 +16,10 @@ pylint==2.5.0
 pylint-django==2.0.15
 pylint-plugin-utils==0.6
 pytz==2020.1
+requests==2.23.0
 six==1.14.0
+stripe==2.47.0
 toml==0.10.0
 typed-ast==1.4.1
+urllib3==1.25.9
 wrapt==1.12.1
