--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ autopep8==1.5.2
 certifi==2020.4.5.1
 chardet==3.0.4
 colorama==0.4.3
+dj-database-url==0.5.0
 Django==1.11.29
 django-forms-bootstrap==3.1.0
 idna==2.9
@@ -11,6 +12,7 @@ lazy-object-proxy==1.4.3
 mccabe==0.6.1
 pep8==1.7.1
 Pillow==7.1.2
+psycopg2==2.8.5
 pycodestyle==2.5.0
 pylint==2.5.0
 pylint-django==2.0.15
