--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 astroid==2.4.0
 autopep8==1.5.2
+boto3==1.13.1
+botocore==1.16.1
 certifi==2020.4.5.1
 chardet==3.0.4
 colorama==0.4.3
 dj-database-url==0.5.0
 Django==1.11.29
 django-forms-bootstrap==3.1.0
+django-storages==1.9.1
+docutils==0.15.2
 idna==2.9
 isort==4.3.21
+jmespath==0.9.5
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 pep8==1.7.1
@@ -17,8 +22,10 @@ pycodestyle==2.5.0
 pylint==2.5.0
 pylint-django==2.0.15
 pylint-plugin-utils==0.6
+python-dateutil==2.8.1
 pytz==2020.1
 requests==2.23.0
+s3transfer==0.3.3
 six==1.14.0
 stripe==2.47.0
 toml==0.10.0
