--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Django==1.11.29
 django-forms-bootstrap==3.1.0
 django-storages==1.9.1
 docutils==0.15.2
+gunicorn==20.0.4
 idna==2.9
 isort==4.3.21
 jmespath==0.9.5
